--- a/Project 1 Intelligent Search Agents/README.rmd
+++ b/Project 1 Intelligent Search Agents/README.rmd
@@ -1,1 +1,10 @@
-f
+## Project 1: Intelligent Search Algorithms
+Starting out with basic search algorithms such as BFS (breadth-first search), DFS (depth-first search), and UCS (uniform cost search), 
+I ultimately built up to implementing an intelligent search algorithm, A* (A-Star), and designed a non-trivial and consistent heuristic 
+(one that combines multiple heuristics appropriately) to incorporate domain knowledge into the Pacman Agent's search through the maze to collect food pellets.
+
+Watch videos below to watch my intelligent search pacment agent in action!
+
+https://github.com/Bomi-Mia-Jung/Artificial-Intelligence-AI-Pacman-Game-Agent/assets/77511489/87403b71-105e-41a5-a2fe-cfd5fb3ee1c4
+
+https://github.com/Bomi-Mia-Jung/Artificial-Intelligence-AI-Pacman-Game-Agent/assets/77511489/97442973-495b-4aa1-9c6c-e4cbaac86195
